<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Omnipaste.debug</string>
    <string name="motto">Make it simple and quick to switch between your computer and your mobile devices.</string>

    <!-- OmniService -->
    <string name="service_description">The OmniService provides all the core functionality for Omnipaste</string>

    <!-- Launcher -->
    <string name="loading_explainer">Connecting to your other devices.</string>

    <!-- Login -->
    <string name="login_hint">Authorization Code</string>
    <string name="login_button">Login</string>
    <string name="login_invalid_code">Invalid Authorization Code</string>
    <string name="login_authorization_code_explainer">To get an authorization code simply click on the link bellow and copy the 6 digit authorization code over here.</string>
    <string name="login_authorization_code_link"><![CDATA[<a href="%s/authorization_codes/new">Get authorization code here</a>]]></string>

    <!-- Device activate -->
    <string name="device_init_error_retry">Press back to retry</string>
    <string name="device_init_error_message">We failed master :(, please don\'t kill us!</string>

    <!-- Main Activity -->
    <string name="main_activity_device_not_supported">This device is not supported.</string>

    <!-- ACTIVITY -->
    <string name="clipping_delete">Remove</string>
    <string name="clipping_copy">Copy</string>
    <string name="clipping_copy_toast">Copied to Clipboard</string>
    <string name="clippings_location">Location</string>
    <string name="event_from">from</string>
    <string name="contact_sync_started">Contact sync started</string>
    <string name="contact_sync_started_status">Please be patient, this might take awhile depending on the number of contacts.</string>
    <string name="contact_sync_completed">Contact sync completed</string>
    <string name="contact_sync_completed_status">You can now send greetings from your PC to your phone contacts.</string>
    <string name="contact_sync_failed">Contact sync failed</string>

    <!-- Navigation -->
    <string name="navigation_drawer_activity">Activity</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_privacy_policy">Privacy Policy</string>
    <string name="navigation_drawer_exit">Exit</string>

    <!-- ABOUT -->
    <string name="title_activity_about">About</string>
    <string name="about_version">Version</string>

    <!-- All Alone -->
    <string name="all_alone_title">Wip :( I am all alone, nobody loves me.</string>
    <string name="all_alone_explanation">To connect your PC, open www.omnipasteapp.com on your browser and follow the instructions there.</string>
    <string name="all_alone_footer">Waiting for other devices to come online</string>

    <!-- Tutorial Clipping local -->
    <string name="tutorial_clipping_local_title">Go ahead and copy the following text (double tap):</string>
    <string name="tutorial_clipping_local">I just installed Omnipaste, the service that links my devices.</string>
    <string name="tutorial_clipping_local_footer">Once copied, you have this available on your computer\'s clipboard. You can paste it on Facebook. The possibilities are endless.</string>

    <!-- Tutorial Clipping cloud -->
    <string name="tutorial_clipping_cloud_title">Congratulations. You can now copy and paste text across devices.</string>
    <string name="tutorial_clipping_cloud">Try that now by copying some text from your PC.</string>

    <!-- Tutorial -->
    <string name="tutorial_local_clipping">This is something that you\'ve copied from your phone.</string>
    <string name="tutorial_cloud_clipping">This is something that was copied from your PC.</string>
    <string name="tutorial_phone">After you copy a phone number from your PC you can simply tap on call.</string>
    <string name="tutorial_address">After you copy an address from your PC simply press navigate.</string>
</resources>
