<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context="com.omnipaste.droidomni.debug.AllAloneFragment"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/tutorial_clipping_local_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:textIsSelectable="true"
        android:id="@+id/tutorial_local_clipping"
        android:text="@string/tutorial_clipping_local"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/tutorial_clipping_local_footer"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"/>
</LinearLayout>
