<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context="com.omnipaste.droidomni.debug.AllAloneFragment"
    tools:ignore="Overdraw">

    <ProgressBar
        android:layout_marginTop="@dimen/default_padding"
        android:id="@+id/all_alone_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/all_alone_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/all_alone_footer"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"/>

    <TextView
        android:id="@+id/all_alone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/all_alone_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"/>

    <TextView
        android:id="@+id/all_alone_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_alone_explanation"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"/>
</LinearLayout>
